# bt-edb-alphajunoctl

./: .gitignore  Makefile.am  configure.ac
src/: .dir-locals.el  alphajunoctl.c  alphajunoctl.h  generated-genums.c.in  generated-genums.h.in  genums.h  midi.h  voice.c  voice.h
